k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carsi-production
  labels:
    app.kubernetes.io/part-of: carsi-lms
    environment: production
